@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Sat Aug 18 08:11:28 +0200 2007
+// Fri Jun 06 13:04:02 +0200 2008
 //
 // (C) 2005 Jb Evain
 //
@@ -1305,7 +1305,7 @@ namespace Mono.Cecil.Cil {
 		public static readonly OpCode Constrained = new OpCode (
 			0xfe, 0x16,
 			Code.Constrained, FlowControl.Next,
-			OpCodeType.Prefix, OperandType.InlineTok,
+			OpCodeType.Prefix, OperandType.InlineType,
 			StackBehaviour.Pop0, StackBehaviour.Push0);
 
 		public static readonly OpCode Cpblk = new OpCode (
